点集改用并发Queue
绘制方丢线