@@ -17,6 +17,7 @@ import java.awt.*;
 import java.awt.event.*;
 import java.awt.geom.Point2D;
 import java.util.ArrayList;
+import java.util.concurrent.ConcurrentLinkedDeque;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.Executors;
 
@@ -43,7 +44,7 @@ public class PeerGUI implements IClient, MouseListener, MouseMotionListener, Act
     private JLabel IpLabel;
     private JLabel portLabel;
     private JButton kickButton;
-    private ArrayList<Point2D> pointArrayList;
+    private ConcurrentLinkedDeque<Point2D> pointQ;
     private Graphics2D canvasGraphics;
     private boolean isFill = false;
     SettableFuture<Boolean> futurePreviewAccept;
@@ -266,10 +267,10 @@ public class PeerGUI implements IClient, MouseListener, MouseMotionListener, Act
 
         x1 = e.getX();
         y1 = e.getY();
-        if(pointArrayList == null){
-            pointArrayList = new ArrayList<>();
+        if(pointQ == null){
+            pointQ = new ConcurrentLinkedDeque<>();
         }else{
-            pointArrayList.clear();
+            pointQ.clear();
         }
 
         if (currentShapeType.equals("text")) {
@@ -345,7 +346,7 @@ public class PeerGUI implements IClient, MouseListener, MouseMotionListener, Act
                             if (currentShapeType.equals("eraser")) {
                                 tempColor = Color.white;
                             }
-                            canvasShape = new CanvasShape(currentShapeType, tempColor, username, pointArrayList, strokeInShape);
+                            canvasShape = new CanvasShape(currentShapeType, tempColor, username, new ArrayList<>(pointQ), strokeInShape);
                         } else if (currentShapeType.equals("text")) {
                             canvasShape = new CanvasShape(currentShapeType, color, x1, x2, y1, y2, strokeInShape);
                             String texts = JOptionPane.showInputDialog(peerFrame, "input your text", "text", JOptionPane.PLAIN_MESSAGE, null, null, null).toString();
@@ -407,9 +408,9 @@ public class PeerGUI implements IClient, MouseListener, MouseMotionListener, Act
 //        canvasGraphics = (Graphics2D) canvasPanel.getGraphics();
         Stroke tempStroke = new BasicStroke(Integer.parseInt(strokeCB.getSelectedItem().toString()));
         if (currentShapeType.equals("pen") || currentShapeType.equals("eraser")) {
-            if (!pointArrayList.isEmpty()) {
-                x4 = (int) pointArrayList.get(pointArrayList.size() - 1).getX();
-                y4 = (int) pointArrayList.get(pointArrayList.size() - 1).getY();
+            if (!pointQ.isEmpty()) {
+                x4 = (int) pointQ.getLast().getX();
+                y4 = (int) pointQ.getLast().getY();
             }
             Color tempColor;
             if (currentShapeType.equals("eraser")) {
@@ -423,9 +424,9 @@ public class PeerGUI implements IClient, MouseListener, MouseMotionListener, Act
                 canvasGraphics.setStroke(tempStroke);
                 canvasGraphics.drawLine(finalX, finalY, x3, y3);
             });
-            pointArrayList.add(new Point(x3, y3));
+            pointQ.add(new Point(x3, y3));
 
-            tmp = new CanvasShape(currentShapeType, tempColor, username, pointArrayList, Integer.parseInt(strokeCB.getSelectedItem().toString()));
+            tmp = new CanvasShape(currentShapeType, tempColor, username, new ArrayList<>(pointQ), Integer.parseInt(strokeCB.getSelectedItem().toString()));
             SwingUtilities.invokeLater(() -> drawCanvasShape(tmp));
 //            wb.tempShapes.put(username, tmp);
         }else{
